# GW2-Log-Score

./: .gitignore  .gitmodules  .opencodeignore  LICENSE  README.md  TEST_AND_STARTUP_GUIDE.md  analyze_datajson.py  build_frontend.bat  pyproject.toml  requirements.txt  run_lint.bat  test_api.py  test_zevtc_parser.py
backend/: AGENTS.md  CONFIG_ACCESS_GUIDELINE.md  CONFIG_CHANGE_PROCESS.md  DEVELOPMENT_GUIDE.md  OPERATIONS_MANUAL.md  README.md  create_main.py  main.py  main_simple.py  pyproject.toml  requirements.txt  simple_app.py  start_monitor.bat  test_app2.py  test_dict_initialization.py  test_upload.py  verify_dict_naming.py  verify_dict_naming_simple.py
config/: default.json
docs/: API.md  API_AND_REPORTS.md  COMPONENT_GUIDE.md  COMPONENT_STYLE_GUIDE.md  CSS_ARCHITECTURE.md  DATA_JSON_FIELDS.md  DATA_MANAGEMENT.md  DESIGN_TOKENS.md  DEVELOPMENT.md  DEVELOPMENT_GUIDES.md  DIRECTORY_OPTIMIZATION.md  IMPLEMENTATION.md  IMPLEMENTATION_AND_OPTIMIZATION.md  REFACTOR_EXAMPLE.md  ROADMAP_AND_REQUIREMENTS.md  SCORING_RULES.md  需求文档.md
frontend/: .env.development  .env.production  .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: analyze_structure.py  check_defenses.py  check_history.py  check_syntax.py  clean_db.py  clear_data.py  diagnose.py  execute_tests.ps1  file_naming_checker.py  find_duplicate_files.py  run_pytest.ps1  run_tests.bat  run_tests.ps1  sandbox_test.ps1  setup_venv.ps1  start.py  start_backend.bat  start_backend.sh
src/: main.py
tests/: check_full_flow.py  (+20 more)
(+169 files in other folders)
